force-app/main/default/objects/OpportunityLineItemSchedule/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>