force-app/main/default/objects/OpportunityLineItemSchedule/fields/Schedule_Qty_Verified__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Qty_Verified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-2719
Sales: Create verification field for Sales Ops to validate the Rev Schedule QTY against the actuals</description>
    <label>Schedule Qty Verified?</label>
    <type>Checkbox</type>
</CustomField>