force-app/main/default/objects/OpportunityLineItemSchedule/fields/Schedule_SAP_SO__c.field-meta.xml
<CustomField>
    <fullName>Schedule_SAP_SO__c</fullName>
    <description>SDS-2719
Sales: Create verification field for Sales Ops to validate the Rev Schedule QTY against the actuals</description>
    <label>Schedule SAP SO#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>